# organised

./: .replit  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  start.py
client/: index.html
client/src/: AIAssistant.tsx  AcademicSuite.tsx  Analytics.tsx  AnalyticsPage.tsx  AnimatedReviews.tsx  App.tsx  ApplyModal.tsx  CareerSuite.tsx  ChatInput.tsx  ChatOnboarding.tsx  ChatOnboardingNew.tsx  CreditsPage.tsx  CreditsPurchase.tsx  Dashboard.tsx  DocumentUpload.tsx  Documents.tsx  DonorDashboard.tsx  DonorDiscovery.tsx  DonorDiscovery.tsx.broken  DownloadSuccessFlow.tsx  ExpertReviewFlow.tsx  FloatingReviews.tsx  ForgotPasswordPage.tsx  Funding.tsx  FundingOpportunities.tsx  GenesisEngine.tsx  HumanHelpPage.tsx  IntelligentBotAssistant.tsx  IntelligentOnboardingSystem.tsx  L1Page.tsx  LandingPage.tsx  LoginPage.tsx  MatchingPage.tsx  NGOPipeline.tsx  NotFoundPage.tsx  OnboardPage.tsx  OnboardPageFixed.tsx  OpportunitiesPage.tsx  PersonalizedDashboard.tsx  ProjectManager.tsx  (+16 more)
docs/: ADMIN_ACCESS.md  API_DOCUMENTATION.md  DODO_PAY_SETUP.md  FASTAPI_SERVICES.md  FINAL-ACCESS-GUIDE.md  README.md  replit.md
scripts/: launch_granada_os.py  run_fastapi.sh  start.sh  start_all_services.py  start_fastapi.py  start_wabden_api.py
server/: additional_routes.txt
server/admin/: routes.ts
server/analytics/: routes.ts
server/app/: llm.py  logger.py
server/assistant/: routes.ts
server/auth/: auth.ts
server/bots/: bot_manager.py  bot_service.py  intelligent_bot_controller.ts
server/business/: routes.ts
shared/: schema.ts
(+132 files in other folders)
